public/css/project.css
#javascriptDetector {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 55vh;
  z-index: 1000;
  background-color: white;
  text-align: center;
  padding-top: 45vh;
  font-size: 16px;
}

body {
  background-color: #000011;
  /*background-image: url("../../Nock-ten_2016-12-25_0210Z.jpg");*/
}
/*
#loading-panel {
  width: 100%;
  height: 1000px;
  min-height: 100%;
}*/

.wait-tabs {
  /*hide until all tabs are initialized*/
  display: none;
}

.mdl-layout {
  margin: 0px auto;
  left: 0;
  right: 0;
}

@media screen and (min-width: 1024px) {
  .mdl-layout {
    max-width: 1024px;
    /*min-width: 600px;*/
  }

  .mdl-layout__drawer-button {
    left: 0;
    top: 0;
    margin: 9px 0px !important;
    background-color: transparent !important;
  }

  .header-vspacer {
    height: 20px;
  }
}

@media screen and (max-width: 1023px) {
  .header-vspacer {
    height: 12px;
  }

  .mdl-layout__drawer-button {
    top: 0;
    left: 0;
    margin: 0px !important;
    background-color: transparent !important;
  }
}

.mdl-layout__header {
  background-color: #222233;
  background-image: url('../img/a.png');
}

.mdl-layout__header-row {
  display: block;
  white-space: nowrap;
  padding-left: 48px;
}

#logo {
  text-decoration: none;
  color: #ef8000;
  font-weight: 900;
  font-size: 24px;
  text-shadow: 2px 1px #000000;
}

#logo:hover {
  text-decoration: underline;
  color: #ef8000;
  font-weight: 900;
  font-size: 24px;
  text-shadow: 2px 1px #000000;
}

.mdl-layout__tab-bar {
  /*height: 48px;*/
  height: 72px;
  width: calc(100% - 72px);
  padding-left: 36px;
  /*overflow: hidden;*/
  background-color: transparent;
}

.mdl-layout__tab {
  padding: 0px 16px;
}

.mdl-layout__tab.two-line {
  line-height: 16px;
  padding-top: 6px;
  height: 42px;
}

.mdl-layout__tab-bar-button {
  width: 36px;
  background-color: transparent;
}

.mdl-layout__tab-bar-button.is-active {
  color: #ff8820;
  background-color: rgba(255, 255, 255, 0.24);
}

.mdl-layout__tab-panel {
  min-height: calc(100vh - 112px - 138px);
}

.mdl-layout__content {
  background-color: rgba(255, 255, 255, 0.97);
}

.page-content {
  padding: 10px 20px;
}

.func {
  color: rgba(66, 66, 66, 0.89);
  height: 24px;
  line-height: 24px;
  font-size: 16px;
  padding: 5px 0px 5px 40px;
  text-decoration: none;
}

.func > .material-icons {
  font-size: 24px;
  padding-right: 5px;
  vertical-align: middle;
}

.mdl-mini-footer__right-section {
  margin-left: auto;
  margin-right: 0;
}

.t-bottom::before {
  content: "";
  height: 100%;
  display: inline-block;
  vertical-align: bottom;
}

.mdl-logo {
  margin-bottom: 0;
}

@media screen and (max-width: 1024px) {
  footer {
    margin-top: 8px;
  }
}

#dim {
  display: none;
  z-index: 200;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.75);
  position: fixed;
  top: 0;
  left: 0;
  text-align: center;
}

.firebaseui-container {
  border-radius: 3px;
  height: 100%;
  padding: 5px 0;
  min-width: 240px;
}

#firebaseui-auth-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  background-color: white;
  border-radius: 3px !important;
}

.topRight {
  color: rgba(0, 0, 0, 0.89);
  position: absolute;
  top: 0;
  right: 0;
  z-index: 2;
}

